--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
     "react-scripts": "5.0.0",
+    "react-slider": "^1.3.1",
     "react-spring": "^9.4.2",
     "react-wavify": "^1.5.4",
     "use-sound": "^4.0.1",
