--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@use-gesture/react": "^10.2.4",
     "react": "^17.0.2",
+    "react-awesome-button": "^6.5.1",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
     "react-scripts": "5.0.0",
