--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react": "^17.0.2",
     "react-awesome-button": "^6.5.1",
     "react-canvas-draw": "^1.2.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.0",
     "react-slider": "^1.3.1",
     "react-spring": "^9.4.2",
+    "react-use": "^17.4.0",
     "react-wavify": "^1.5.4",
     "redux": "^4.2.0",
     "tabler-icons-react": "^1.48.0",
