--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@use-gesture/react": "^10.2.4",
+    "ag-grid-react": "^27.3.0",
     "react": "^17.0.2",
     "react-awesome-button": "^6.5.1",
     "react-canvas-draw": "^1.2.1",
