--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
+    "react-lorem-ipsum": "^1.4.10",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.0",
     "react-slider": "^1.3.1",
